Fix spacing and revamp resume page

--- a/mysite/myapp/src/components/subcomponents/resume.css
+++ b/mysite/myapp/src/components/subcomponents/resume.css
@@ -26,6 +26,7 @@
     text-align: center;
     text-decoration: none;
     justify-content: center;
+    margin-bottom: 2%;
 }
 
 #resume-link:hover {
