--- a/mysite/myapp/static/frontend/css/drews_css.css
+++ b/mysite/myapp/static/frontend/css/drews_css.css
@@ -114,7 +114,7 @@ body {
   margin-top: 4%;
   margin-left: 15%;
   margin-bottom: 30%;
-  padding-bottom: 4%;
+  padding-bottom: 10%;
   overflow: auto;
   padding-right: 15px;
 }
